--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -14,6 +14,17 @@
 .profile-img{
     max-width: 40px;
 }
+.checkbtn{
+    font-size: 30px;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+#check{
+    display: none;
+}
 @media(max-width:1280px){
     .logo{
         max-width: 260px;
