--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -27,15 +27,19 @@
     min-width: 20px !important;
 } 
 .footer-top-line{
-background-image: url('../../../public/assets/footer-top-line.png');
+/* background-image: url('../../../public/assets/footer-top-line.png');
 height: 10px;
-width: 100%;
-background-repeat: no-repeat;
+width: 100%; */
+/* background-repeat: no-repeat; */
 /* background-position: center; */
-background-size: cover;
+/* background-size: cover; */
+position: absolute;
 }
 .footer-links{
     color: aliceblue;
+}
+.footer-gray-text{
+    color:rgba(255, 252, 252, 0.438);
 }
 .footer-btn{
     border-radius: 12.02px;
@@ -43,8 +47,16 @@ background: linear-gradient(66deg, #00C3FD 25.98%, #0194FE 65.48%);
 box-shadow: 0px 8.184px 15.345px 0px #003861;
 }
 .footer-social-img{
-    width: 92px;
+    width: 40px;
     border-radius: 50%;
+}
+.footer-copty-text{
+    max-width: 90%;
+    margin: auto;
+    text-align: center;
+    background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(89, 145, 255, 1), rgba(0, 0, 0, 1));}
+.footer-copty-text p{
+    color: #000618;
 }
 @media(max-width:1280px){
     .logo{
