--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -65,6 +65,9 @@ box-shadow: 0px 8.184px 15.345px 0px #003861;
 .footer-copty-text p{
     color: #000618;
 }
+.footer-copty-text p{
+    font-size: 10px;
+}
 @media(max-width:1600px){
     .footer-content{
         max-width: 60%;
@@ -99,15 +102,10 @@ box-shadow: 0px 8.184px 15.345px 0px #003861;
         padding: 0px 4px 0px 4px;
     }
     .footer-copty-text p{
-        font-size: 10px !important;
         color: #fff;
     }
     .footer-btn{
         padding-left:10px;
         padding-right: 10px;
     }
-    .checkbtn{
-
-    }
-    
 }
