--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -68,7 +68,12 @@ box-shadow: 0px 8.184px 15.345px 0px #003861;
 .footer-copty-text p{
     font-size: 10px;
 }
-@media(max-width:1600px){
+.footer-content{
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+@media(min-width:1600px){
     .footer-content{
         max-width: 60%;
         margin-left: auto;
@@ -107,5 +112,8 @@ box-shadow: 0px 8.184px 15.345px 0px #003861;
     .footer-btn{
         padding-left:10px;
         padding-right: 10px;
+    }
+    .footer-content{
+        max-width: 100%;
     }
 }
