--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -4,7 +4,7 @@
 .logo{
     max-width: 304px;
 }
-.header-menu{
+.headerMenu{
     box-shadow: 0px 4px 4px 0px #00000040;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
 }
@@ -124,5 +124,32 @@ box-shadow: 0px 8.184px 15.345px 0px #003861;
     }
     .engine-header{
         padding-top:6px;
+    }
+    /* menu responsivesness */
+
+}
+@media(max-width:640px){
+    .headerMenu{
+        position: absolute;
+        top: 60px;
+        width: 100%;
+        display: flex !important;
+    }
+    .headerMenu {
+        display: flex;
+    }
+    .menu-links a{
+        display: block !important;
+    }
+    .headerMenu ul{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content:center ;
+        flex-direction: column;
+        gap: 30px;
+    }
+    .headerMenu ul li a{
+        font-size: 14px;
     }
 }
