--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -177,6 +177,8 @@ button2:hover::after {
 }
 
 
+
+
 .maxWidth{
   max-width: 1920px;
 }
@@ -214,4 +216,50 @@ button2:hover::after {
   text-align: inherit;
 }
 
+
+
+button3.relative::before,
+button3.relative::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  width: 5px;
+  height: 30px;
+  background-color: #AD1AAF; /* Default color */
+  opacity: 0.8;
+  transform: translateY(-50%);
+  transition: background-color 0.3s;
+}
+
+button3.relative::before {
+  left: -15px; /* Stick to the beginning of the button */
+  transition: left 0.3s;
+}
+
+button3.relative::after {
+  right: -15px; /* Stick to the end of the button */
+  transition: right 0.3s;
+
+}
+
+button3:hover::before {
+  left: -5px; /* Stick to the beginning of the button */
+  transition: left 0.3s;
+}
+button3:hover::after {
+  right: -5px; /* Stick to the beginning of the button */
+  transition: right 0.3s;
+}
+
+
+button3:hover::before,
+button3:hover::after {
+  background-color: #AD1AAF; /* Color on hover */
+}
+
+.radial-gradient-bottom-left {
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle at bottom left, #3b82f6, transparent);
+}
 
