--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,6 +85,12 @@ button.relative {
   transition: background-color 0.3s, color 0.3s;
 }
 
+@media(max-width:640px) {
+  button.relative{
+    width: 6rem;
+  }
+}
+
 button.relative::before,
 button.relative::after {
   content: '';
