--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,8 @@ main {
 }
 .container {
   margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;;
 }
 .view_all {
   padding: 10px 30px !important;
