--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -52,7 +52,6 @@
 
 .footer-gray-text {
     color: rgba(255, 252, 252, 0.438);
-    font-size: 10px;
 }
 
 .footer-btn {
@@ -73,12 +72,18 @@
 .footer-copty-text {
     max-width: 90%;
     margin: auto;
+    padding: 10px;
     text-align: center;
     background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(89, 145, 255, 1), rgba(0, 0, 0, 1));
+    margin-bottom: 20px;
 }
 
 .footer-copty-text p {
     color: #000618;
+    font-weight: bold;
+    font-family: 'Inter';
+    letter-spacing: 1px;
+
 }
 
 
@@ -121,7 +126,9 @@
     .logo {
         max-width: 155px;
     }
-
+    .footer-gray-text{
+        font-size: 14px;
+    }
     .fs-10x {
         font-size: 10px !important;
     }
@@ -165,6 +172,9 @@
         display: block;
         background-color: black;
     }
+    .footer-gray-text{
+        font-size: 10px;
+    }
     .headerDefault{
         display: none !important;
     }
@@ -195,5 +205,8 @@
 
     .headerMenu ul li a {
         font-size: 9.7px;
+    }
+    .footer-copty-text p {
+        font-size: 10px;
     }
 }
