--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -49,10 +49,14 @@ position: absolute;
 background: linear-gradient(66deg, #00C3FD 25.98%, #0194FE 65.48%);
 box-shadow: 0px 8.184px 15.345px 0px #003861;
 }
-.footer-social-img{
+.footer-social-img {
     width: 40px;
     border-radius: 50%;
+    background: rgba(199, 225, 219, 0.11);
+    backdrop-filter: blur(25px);
+    padding: 10px;
 }
+
 .follow-us{
     font-size: 10px;
 }
