--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -319,10 +319,21 @@ div#lottie {
   max-height: 115%;
   width: 100% !important;
 }
+.align-center {
+  align-items: center;
+}
+
 @media(min-width:768px) {
   .container {
     padding-left: 20px;
     padding-right: 20px;
+  }
+  footer {
+    background-image: url(/_next/static/media/footer-top-line.1cbd8452.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 }
 @media(min-width:992px){
