--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -58,6 +58,8 @@
     border-radius: 12.02px;
     background: linear-gradient(66deg, #00C3FD 25.98%, #0194FE 65.48%);
     box-shadow: 0px 8.184px 15.345px 0px #003861;
+    max-width: fit-content;
+    margin: auto;
 }
 
 .footer-social-img {
@@ -69,9 +71,7 @@
 }
 
 
-.follow-us {
-    font-size: 10px;
-}
+
 
 .footer-copty-text {
     max-width: 90%;
@@ -90,22 +90,26 @@
 
 }
 
-
+.footer-copty-text p {
+    font-size: 12px;
+}
 
 .footer-content {
-    max-width: 60%;
     margin-left: auto;
     margin-right: auto;
 }
 
 @media(min-width:1600px) {
     .footer-content {
-        max-width: 60%;
         margin-left: auto;
         margin-right: auto;
     }
 }
-
+@media(min-width:1200px) {
+    .footer-copty-text p {
+        font-size: 16px;
+    }
+}
 @media(max-width:1280px) {
     .logo {
         max-width: 260px;
@@ -130,6 +134,9 @@
     .logo {
         max-width: 150px;
         
+    }
+    .follow-us {
+        font-size: 10px;
     }
     .footer-gray-text{
         font-size: 14px;
