--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,13 +105,27 @@ button.relative {
     width: 6rem;
     height: 2rem;
   }
-  
   .container {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
   }
+  header .container {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
+@media (min-width:340px) and (max-width:640px) {
+  .container {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
 
+}
+@media(max-width:340px) {
+  .header-btn {
+    padding: 5px 7px !important;
+  }
+}
 button.relative::before,
 button.relative::after {
   content: '';
