--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -324,6 +324,7 @@ div#lottie {
 
 @media(min-width:768px) {
   .container {
+    max-width: 95%;
     padding-left: 20px;
     padding-right: 20px;
   }
